<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="db_root_all_users">AllUsers</string>
    <string name="db_root_students">students</string>
    <string name="db_root_tutors">tutors</string>
    <string name="db_root_grades">grades</string>


    <string name="app_name">SKLN</string>
    <string name="login">login</string>
    <string name="sign_up">signup</string>
    <string name="sign_up_now"> &#160;Signup Now</string>
    <string name="notregister_yet"> Not registered yet?</string>

    <string name="first_namehint">FIRST NAME</string>
    <string name="last_namehint">LAST NAME</string>
    <string name="next">next</string>
    <string name="verify_number">verify your phone number.</string>
    <string name="resend_code">resend code</string>
    <string name="enter_x">Please enter %s</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_validemail">Please enter valid email address</string>
    <string name="enter_correct_otp">Please enter the OTP.</string>
    <string name="error">Failure!</string>
    <string name="choose_subjects">Please choose subjects</string>
    <string name="sending">Sending code... Please wait.</string>
    <string name="welcome_onboard">welcome\nonboard.</string>
    <string name="tutor_institutes">Tutors/Institutes</string>
    <string name="tutor_institute">Tutors / Institute</string>
    <string name="student">Student</string>
    <string name="student_p">Students/Parents</string>
    <string name="studentp">Student / Parent</string>
    <string name="i_am">I\'m a...</string>
    <string name="getToKnowYou">Let\'s get to know you!</string>
    <string name="heythere">Hey there !</string>
    <string name="letsget_start">Let\'s get started.</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="labelloginid">login ID</string>
    <string name="labelemailid">email id</string>
    <string name="labelsetemailid">Enter E-MAIL</string>
    <string name="labelpass">password</string>
    <string name="labelsetpass">SET PASSWORD</string>
    <string name="forgot_pass">forgot password?</string>

    <string name="forgot_passid">forgot password/ID?</string>

    <string name="sent">Code sent.</string>
    <string name="choose_hobbies">Please choose hobbies to teach</string>
    <string name="select_class_text_1">Select the class you are in.</string>
    <string name="hey">Hey,</string>
    <string name="lets_custom_learning_plan">let\'s customise your learning plan.</string>
    <string name="select_favorite_subject">select your favourite subjects.</string>
    <string name="select_least_favorite_subject">select your least favourite subjects.</string>
    <string name="jack_a_dull">\"All work and no play makes  Jack/Jake a dull boy/girl\"</string>
    <string name="select_hobby_text_1">Select some hobbies to pursue.</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="crop">Crop</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="pleasefollow">Please follow the following steps to register as a tutor/coaching institute on skillone platform -</string>
    <string name="step1">1. Go to the website and click \"signup\" .</string>
    <string name="step2">2. Select \"signup to teach\" .</string>
    <string name="step3">3. Go through the procedure step by step.</string>
    <string name="step4">4. A login ID will be generated which you need to enter along with your password when you login.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_loginsignup">LoginSignup Module</string>
    <string name="if_already_registered_login_by_clicking_the_button_below">If already registered , login by clicking the button below.</string>
    <string name="forgot_passwodheader">forgot password</string>
    <string name="passwordweak">Weak password.You have to enter at least 6 digit in password field!</string>
    <string name="tutors_institute_tutorsignup">Tutors/Institute</string>
    <string name="student_verify">Student Verified!</string>
    <string name="tutor_verify">You are logged in successfully!</string>
    <string name="foregot_passwordemail_send">Password Reset Email Send</string>
    <string name="send_email_btn">send email</string>
    <string name="enter_your_email_address_associated_with_your_account_and_we_will_send_you_reset_password_link">Enter your email address associated with your account and we will send you reset password link.</string>
</resources>