<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.autohub.loginsignup.TutorSignupActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvSignup"
            style="@style/signup_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />


        <RelativeLayout
            android:id="@+id/rrshaddow"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignup"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@drawable/cardshadowbg_drawable"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTutorOrStudent"
                style="@style/signup_students_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_back_rect"
                android:paddingStart="28dp"
                android:paddingTop="4dp"
                android:paddingEnd="29dp"
                android:paddingBottom="3dp"
                android:text="@string/tutors_institute_tutorsignup" />
        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rrshaddow"
            android:paddingTop="29dp"
            android:paddingEnd="10dp"
            android:scrollbars="none"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="21dp"
                android:orientation="vertical">

                <TextView

                    style="@style/please_fol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pleasefollow" />

                <TextView
                    android:id="@+id/txtwebsite"
                    style="@style/please_fol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/step1"

                    android:textColorLink="@color/blue" />

                <TextView
                    style="@style/please_fol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/step2" />

                <TextView
                    style="@style/please_fol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/step3" />

                <TextView
                    style="@style/please_fol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/step4" />

                <TextView
                    style="@style/if_already"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="76dp"
                    android:text="@string/if_already_registered_login_by_clicking_the_button_below" />


                <androidx.appcompat.widget.AppCompatButton
                    style="@style/loginbtn"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="23dp"
                    android:background="@drawable/loginbutton_drawable"
                    android:drawableEnd="@drawable/arrowright"
                    android:gravity="left|center_vertical"
                    android:onClick="@{()->callback.login()}"
                    android:paddingStart="14dp"
                    android:paddingEnd="11dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</layout>