<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.autohub.loginsignup.TutororStudentSelection" />
    </data>


    <RelativeLayout
        android:background="@android:color/white"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.autohub.loginsignup.TutororStudentSelection">

        <TextView
            android:id="@+id/tvSignup"
            style="@style/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />

        <TextView
            style="@style/im_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSignup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:text="@string/i_am"
            android:textSize="45sp" />

        <Button
            android:onClick="@{()->callback.onTutorClick()}"

            android:id="@+id/btnTutor"
            style="@style/tutors_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/border_circular_rect"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"
            android:text="@string/tutor_institutes"
            android:textSize="29sp" />

        <Button
            android:onClick="@{()->callback.onStudentClick()}"

            android:id="@+id/btnStudent"
            style="@style/students_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnTutor"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/border_circular_rect"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"
            android:text="@string/student_p"
            android:textSize="29sp" />
    </RelativeLayout>
</layout>