<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.autohub.loginsignup.student.SignupStart" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignup"
            style="@style/signup_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />

        <RelativeLayout
            android:id="@+id/rrshaddow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@drawable/cardshadowbg_login">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTutorOrStudent"
                style="@style/signup_students_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_back_rect"
                android:gravity="center"
                android:paddingStart="28dp"
                android:paddingTop="4dp"
                android:paddingEnd="29dp"
                android:paddingBottom="3dp"
                android:text="@string/student_p" />
        </RelativeLayout>


        <ProgressBar
            android:id="@+id/pbSignupProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_below="@id/rrshaddow"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:max="100"
            android:progressDrawable="@drawable/progress_drawable" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pbSignupProgress"


            android:fillViewport="true"
            android:paddingTop="30dp"
            android:paddingEnd="10dp"
            android:scrollbars="none"
            tools:ignore="RtlSymmetry">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView

                        android:id="@+id/tvGetToKnow"
                        style="@style/lets_get_"
                        android:paddingStart="12dp"
                        android:text="@string/getToKnowYou" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="14dp"
                        android:paddingStart="10dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtFirstName"
                            style="@style/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/shadow_rect"
                            android:drawablePadding="9dp"
                            android:hint="@string/first_namehint"
                            android:inputType="textPersonName|textCapSentences"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="8dp"
                            android:text=""
                            android:textColorHint="@color/black"
                            tools:ignore="Autofill,MissingPrefix" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:paddingStart="10dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtLastName"
                            style="@style/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadow_rect"
                            android:drawablePadding="9dp"
                            android:hint="@string/last_namehint"
                            android:inputType="textPersonName|textCapSentences"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="8dp"
                            android:text=""
                            android:textColorHint="@color/black"
                            tools:ignore="Autofill,MissingPrefix" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rrshaddowradio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="31dp"
                        android:background="@drawable/cardshadowbg_login">

                        <RadioGroup
                            android:id="@+id/sexGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:checkedButton="@id/radioMale"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioMale"
                                style="@style/sex"
                                android:layout_width="132dp"
                                android:layout_height="36dp"
                                android:background="@drawable/border_rectangle"
                                android:button="@null"
                                android:text="@string/male"
                                android:textColor="@drawable/logintext_selector" />

                            <RadioButton
                                android:id="@+id/radioFemale"
                                style="@style/sex"
                                android:layout_width="132dp"
                                android:layout_height="36dp"
                                android:background="@drawable/border_rectangle"
                                android:button="@null"
                                android:text="@string/female"
                                android:textColor="@drawable/logintext_selector" />
                        </RadioGroup>
                        >
                    </RelativeLayout>


                    <androidx.appcompat.widget.AppCompatTextView

                        android:id="@+id/tvHintPassword"

                        style="@style/enter_emai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:paddingStart="12dp"
                        android:text="@string/labelsetemailid" />

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:paddingStart="10dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtemail"
                            style="@style/editext_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadow_rect"
                            android:drawableStart="@drawable/email"
                            android:drawablePadding="9dp"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="8dp" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView

                        android:id="@+id/tvhintpass"

                        style="@style/enter_emai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:paddingStart="12dp"
                        android:text="@string/labelsetpass" />

                    <!--    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="4dp"

                            android:layout_marginBottom="40dp"
                            android:paddingStart="10dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shadow_rect"
                                android:drawableStart="@drawable/password"
                                android:drawablePadding="9dp"
                                android:inputType="textPassword"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp"
                                android:paddingBottom="8dp" />
                        </RelativeLayout>-->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="100dp"
                        android:background="@drawable/shadow_rect">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            style="@style/editext_style"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/txtshowpass"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/password"

                            android:drawablePadding="9dp"
                            android:inputType="textPassword"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="8dp" />


                        <TextView
                            android:id="@+id/txtshowpass"
                            style="@style/show"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"

                            android:focusable="true"
                            android:onClick="@{()->callback.updatepasswordVisibility()}"
                            android:paddingEnd="11dp"
                            android:paddingBottom="8dp"
                            android:text="@string/show"
                            tools:ignore="RtlSymmetry" />

                    </RelativeLayout>


                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/next"
            android:onClick="@{()->callback.onNextClick()}"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
</layout>