<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.autohub.loginsignup.student.StudentClassSelect" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvSignup"
            style="@style/signup_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />

        <RelativeLayout
            android:id="@+id/rrshaddowradio"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignup"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:background="@drawable/cardshadowbg_drawable">

            <TextView
                android:id="@+id/tvStudent"
                style="@style/signup_second_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/button_background_black"
                android:gravity="center"
                android:paddingStart="28dp"
                android:paddingTop="4dp"
                android:paddingEnd="29dp"
                android:paddingBottom="3dp"
                android:text="@string/student_p" />

        </RelativeLayout>


        <ProgressBar
            android:id="@+id/pbSignupProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_below="@id/rrshaddowradio"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:max="100"

            android:progressDrawable="@drawable/progress_drawable" />

        <TextView
            android:id="@+id/tvSelectText"
            style="@style/signup_general_hint_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pbSignupProgress"
            android:layout_marginStart="12dp"
            android:layout_marginTop="29dp"
            android:gravity="start"
            android:text="@string/select_class_text_1" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnNext"
            android:layout_below="@id/tvSelectText"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp" />

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/worm_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSelectText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            app:dotsColor="@android:color/darker_gray"
            app:dotsCornerRadius="4dp"
            app:dotsSize="8dp"
            app:dotsSpacing="2dp"
            app:dotsStrokeColor="@color/blue"
            app:dotsStrokeWidth="1dp" />


        <ImageButton
            android:id="@+id/btnNext"
            style="@style/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/next"
            android:onClick="@{() -> callback.onNextClick()}"

            android:textAllCaps="false"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
</layout>
